[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtf-framework"
version = "0.1.0"
description = "DTF Framework - A framework for DTF models and utilities"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/sealablab/dtf-framework"
Repository = "https://github.com/sealablab/dtf-framework.git"
Documentation = "https://github.com/sealablab/dtf-framework#readme"

[tool.hatch.build.targets.wheel]
packages = ["dtf_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=dtf_framework"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["dtf_framework"] 